--- a/web/package.json
+++ b/web/package.json
@@ -66,6 +66,7 @@
     "axios": "0.27.2",
     "bootstrap": "4.5.2",
     "bootstrap-icons": "1.8.1",
+    "chart.js": "3.8.0",
     "classnames": "2.3.1",
     "core-js": "3.22.3",
     "country-flag-icons": "1.4.26",
@@ -87,6 +88,7 @@
     "prop-types": "15.8.1",
     "react": "18.1.0",
     "react-aspect-ratio": "1.1.2",
+    "react-chartjs-2": "4.2.0",
     "react-copy-to-clipboard": "5.1.0",
     "react-dom": "18.1.0",
     "react-error-boundary": "3.1.4",
